--- a/Software/VEML6040_AS7341_Test/VEML6040_AS7341_Test.ioc
+++ b/Software/VEML6040_AS7341_Test/VEML6040_AS7341_Test.ioc
@@ -23,8 +23,8 @@ Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PA5
-Mcu.Pin11=PA6
+Mcu.Pin10=PA4
+Mcu.Pin11=PA5
 Mcu.Pin12=PB0
 Mcu.Pin13=PA13 (JTMS-SWDIO)
 Mcu.Pin14=PA14 (JTCK-SWCLK)
@@ -88,6 +88,10 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=GPIO
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA5.GPIO_Label=LD2 [green Led]
 PA5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -95,8 +99,8 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA6.Locked=true
-PA6.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=INT
 PB0.Locked=true
 PB0.Signal=GPIO_Input
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
@@ -168,7 +172,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM16_Init-TIM16-false-HAL-true,5-MX_I2C3_Init-I2C3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM16_Init-TIM16-false-HAL-true,5-MX_I2C3_Init-I2C3-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
