--- a/Testing/LED_Config/LED_Config_Test.ioc
+++ b/Testing/LED_Config/LED_Config_Test.ioc
@@ -29,24 +29,32 @@ Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PA4
-Mcu.Pin11=PA5
-Mcu.Pin12=PB10
-Mcu.Pin13=PA10
-Mcu.Pin14=PA13 (JTMS-SWDIO)
-Mcu.Pin15=PA14 (JTCK-SWCLK)
-Mcu.Pin16=PB3 (JTDO-TRACESWO)
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PA3
+Mcu.Pin11=PA4
+Mcu.Pin12=PA5
+Mcu.Pin13=PA6
+Mcu.Pin14=PA7
+Mcu.Pin15=PB0
+Mcu.Pin16=PB10
+Mcu.Pin17=PC7
+Mcu.Pin18=PA8
+Mcu.Pin19=PA9
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
+Mcu.Pin20=PA10
+Mcu.Pin21=PA13 (JTMS-SWDIO)
+Mcu.Pin22=PA14 (JTCK-SWCLK)
+Mcu.Pin23=PB3 (JTDO-TRACESWO)
+Mcu.Pin24=PB6
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC0
-Mcu.Pin6=PA0
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
-Mcu.PinsNb=19
+Mcu.Pin6=PC1
+Mcu.Pin7=PA0
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -66,7 +74,11 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=R2
 PA0.Signal=S_TIM2_CH1
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=R3
 PA1.Signal=S_TIM2_CH2
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=B_DOWN
@@ -109,13 +121,45 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=L1
+PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=L2
+PA7.Locked=true
+PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=L6
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=L5
+PA9.Locked=true
+PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=L7
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=R1
 PB10.Signal=S_TIM2_CH3
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=SWO
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=L3
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=L9
 PC0.Locked=true
 PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=L8
+PC1.Locked=true
+PC1.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -128,6 +172,10 @@ PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=L4
+PC7.Locked=true
+PC7.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Locked=true
