--- a/Testing/LED_Config/LED_Config_Test.ioc
+++ b/Testing/LED_Config/LED_Config_Test.ioc
@@ -2,17 +2,37 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=TIM2_CH3
-Dma.RequestsNb=1
-Dma.TIM2_CH3.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM2_CH3.0.Instance=DMA1_Channel1
-Dma.TIM2_CH3.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.TIM2_CH3.0.MemInc=DMA_MINC_ENABLE
-Dma.TIM2_CH3.0.Mode=DMA_NORMAL
-Dma.TIM2_CH3.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.TIM2_CH3.0.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM2_CH3.0.Priority=DMA_PRIORITY_HIGH
-Dma.TIM2_CH3.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=TIM2_CH1
+Dma.Request1=TIM2_CH3
+Dma.Request2=TIM2_CH2/CH4
+Dma.RequestsNb=3
+Dma.TIM2_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM2_CH1.0.Instance=DMA1_Channel5
+Dma.TIM2_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM2_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM2_CH1.0.Mode=DMA_NORMAL
+Dma.TIM2_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM2_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM2_CH1.0.Priority=DMA_PRIORITY_HIGH
+Dma.TIM2_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM2_CH2/CH4.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM2_CH2/CH4.2.Instance=DMA1_Channel7
+Dma.TIM2_CH2/CH4.2.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM2_CH2/CH4.2.MemInc=DMA_MINC_ENABLE
+Dma.TIM2_CH2/CH4.2.Mode=DMA_NORMAL
+Dma.TIM2_CH2/CH4.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM2_CH2/CH4.2.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM2_CH2/CH4.2.Priority=DMA_PRIORITY_HIGH
+Dma.TIM2_CH2/CH4.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM2_CH3.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM2_CH3.1.Instance=DMA1_Channel1
+Dma.TIM2_CH3.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM2_CH3.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM2_CH3.1.Mode=DMA_NORMAL
+Dma.TIM2_CH3.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM2_CH3.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM2_CH3.1.Priority=DMA_PRIORITY_HIGH
+Dma.TIM2_CH3.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -29,32 +49,29 @@ Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PA3
-Mcu.Pin11=PA4
-Mcu.Pin12=PA5
-Mcu.Pin13=PA6
-Mcu.Pin14=PA7
-Mcu.Pin15=PB0
-Mcu.Pin16=PB10
-Mcu.Pin17=PC7
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin10=PA5
+Mcu.Pin11=PA7
+Mcu.Pin12=PB10
+Mcu.Pin13=PC7
+Mcu.Pin14=PC9
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA13 (JTMS-SWDIO)
+Mcu.Pin18=PA14 (JTCK-SWCLK)
+Mcu.Pin19=PB3 (JTDO-TRACESWO)
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PA10
-Mcu.Pin21=PA13 (JTMS-SWDIO)
-Mcu.Pin22=PA14 (JTCK-SWCLK)
-Mcu.Pin23=PB3 (JTDO-TRACESWO)
-Mcu.Pin24=PB6
-Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PB6
+Mcu.Pin21=PB9
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin5=PC0
-Mcu.Pin6=PC1
-Mcu.Pin7=PA0
-Mcu.Pin8=PA1
-Mcu.Pin9=PA2
-Mcu.PinsNb=27
+Mcu.Pin5=PA0
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -62,6 +79,8 @@ MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -74,14 +93,13 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=R2
+PA0.Locked=true
 PA0.Signal=S_TIM2_CH1
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=R3
+PA1.Locked=true
 PA1.Signal=S_TIM2_CH2
-PA10.GPIOParameters=GPIO_Label
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA10.GPIO_Label=B_DOWN
+PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Locked=true
 PA10.Signal=GPXTI10
 PA13\ (JTMS-SWDIO).GPIOParameters=GPIO_Label
@@ -110,8 +128,9 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA4.GPIO_Label=B_UP
+PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
@@ -121,45 +140,28 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=L1
-PA6.Locked=true
-PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=L2
+PA7.GPIO_Label=LCD_D7
 PA7.Locked=true
 PA7.Signal=GPIO_Output
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=L6
-PA8.Locked=true
-PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=L5
+PA9.GPIO_Label=LCD_D4
 PA9.Locked=true
 PA9.Signal=GPIO_Output
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=L7
-PB0.Locked=true
-PB0.Signal=GPIO_Output
-PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=R1
+PB10.Locked=true
 PB10.Signal=S_TIM2_CH3
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=SWO
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
 PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=L3
+PB6.GPIO_Label=LCD_D6
 PB6.Locked=true
 PB6.Signal=GPIO_Output
-PC0.GPIOParameters=GPIO_Label
-PC0.GPIO_Label=L9
-PC0.Locked=true
-PC0.Signal=GPIO_Output
-PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=L8
-PC1.Locked=true
-PC1.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=LCD_E
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -173,9 +175,13 @@ PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
 PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=L4
+PC7.GPIO_Label=LCD_D5
 PC7.Locked=true
 PC7.Signal=GPIO_Output
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=LCD_RS
+PC9.Locked=true
+PC9.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Locked=true
@@ -281,7 +287,7 @@ SH.S_TIM2_CH3.ConfNb=1
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM2.IPParameters=Channel-PWM Generation3 CH3,Period,Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1
+TIM2.IPParameters=Period,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
 TIM2.Period=100
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
