--- a/Testing/LED_Config/LED_Config_Test.ioc
+++ b/Testing/LED_Config/LED_Config_Test.ioc
@@ -2,37 +2,17 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=TIM2_CH1
-Dma.Request1=TIM2_CH3
-Dma.Request2=TIM2_CH2/CH4
-Dma.RequestsNb=3
-Dma.TIM2_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM2_CH1.0.Instance=DMA1_Channel5
-Dma.TIM2_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.TIM2_CH1.0.MemInc=DMA_MINC_ENABLE
-Dma.TIM2_CH1.0.Mode=DMA_NORMAL
-Dma.TIM2_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.TIM2_CH1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM2_CH1.0.Priority=DMA_PRIORITY_HIGH
-Dma.TIM2_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.TIM2_CH2/CH4.2.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM2_CH2/CH4.2.Instance=DMA1_Channel7
-Dma.TIM2_CH2/CH4.2.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.TIM2_CH2/CH4.2.MemInc=DMA_MINC_ENABLE
-Dma.TIM2_CH2/CH4.2.Mode=DMA_NORMAL
-Dma.TIM2_CH2/CH4.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.TIM2_CH2/CH4.2.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM2_CH2/CH4.2.Priority=DMA_PRIORITY_HIGH
-Dma.TIM2_CH2/CH4.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.TIM2_CH3.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM2_CH3.1.Instance=DMA1_Channel1
-Dma.TIM2_CH3.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.TIM2_CH3.1.MemInc=DMA_MINC_ENABLE
-Dma.TIM2_CH3.1.Mode=DMA_NORMAL
-Dma.TIM2_CH3.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.TIM2_CH3.1.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM2_CH3.1.Priority=DMA_PRIORITY_HIGH
-Dma.TIM2_CH3.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=TIM2_CH3
+Dma.RequestsNb=1
+Dma.TIM2_CH3.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM2_CH3.0.Instance=DMA1_Channel1
+Dma.TIM2_CH3.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM2_CH3.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM2_CH3.0.Mode=DMA_NORMAL
+Dma.TIM2_CH3.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM2_CH3.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM2_CH3.0.Priority=DMA_PRIORITY_HIGH
+Dma.TIM2_CH3.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -49,29 +29,21 @@ Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PA5
-Mcu.Pin11=PA7
-Mcu.Pin12=PB10
-Mcu.Pin13=PC7
-Mcu.Pin14=PC9
-Mcu.Pin15=PA9
-Mcu.Pin16=PA10
-Mcu.Pin17=PA13 (JTMS-SWDIO)
-Mcu.Pin18=PA14 (JTCK-SWCLK)
-Mcu.Pin19=PB3 (JTDO-TRACESWO)
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13 (JTMS-SWDIO)
+Mcu.Pin12=PA14 (JTCK-SWCLK)
+Mcu.Pin13=PB3 (JTDO-TRACESWO)
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PB6
-Mcu.Pin21=PB9
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin5=PA0
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA4
-Mcu.PinsNb=24
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PB10
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -79,8 +51,6 @@ MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -93,12 +63,9 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-PA0.Locked=true
-PA0.Signal=S_TIM2_CH1
-PA1.Locked=true
-PA1.Signal=S_TIM2_CH2
-PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA10.GPIO_Label=B_DOWN
+PA10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Locked=true
 PA10.Signal=GPXTI10
@@ -128,40 +95,22 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA4.GPIO_Label=B_UP
+PA4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPXTI4
-PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LD2 [green Led]
-PA5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PA5.GPIO_PuPd=GPIO_NOPULL
-PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=LCD_D7
-PA7.Locked=true
-PA7.Signal=GPIO_Output
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=LCD_D4
-PA9.Locked=true
-PA9.Signal=GPIO_Output
 PB10.Locked=true
 PB10.Signal=S_TIM2_CH3
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=SWO
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=LCD_D6
-PB6.Locked=true
-PB6.Signal=GPIO_Output
-PB9.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=LCD_E
-PB9.Locked=true
-PB9.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -174,14 +123,6 @@ PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
-PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=LCD_D5
-PC7.Locked=true
-PC7.Signal=GPIO_Output
-PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=LCD_RS
-PC9.Locked=true
-PC9.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Locked=true
@@ -278,16 +219,10 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
-SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
-SH.S_TIM2_CH1.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
-SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
 SH.S_TIM2_CH3.ConfNb=1
-TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM2.IPParameters=Period,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
+TIM2.IPParameters=Period,Channel-PWM Generation3 CH3
 TIM2.Period=100
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
