--- a/Testing/LED_Config/LED_Config_Test.ioc
+++ b/Testing/LED_Config/LED_Config_Test.ioc
@@ -29,21 +29,27 @@ Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PA10
-Mcu.Pin11=PA13 (JTMS-SWDIO)
-Mcu.Pin12=PA14 (JTCK-SWCLK)
-Mcu.Pin13=PB3 (JTDO-TRACESWO)
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PB10
+Mcu.Pin11=PC7
+Mcu.Pin12=PC9
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PA13 (JTMS-SWDIO)
+Mcu.Pin16=PA14 (JTCK-SWCLK)
+Mcu.Pin17=PB3 (JTDO-TRACESWO)
+Mcu.Pin18=PB6
+Mcu.Pin19=PB9
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA4
+Mcu.Pin5=PA0
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
 Mcu.Pin8=PA5
-Mcu.Pin9=PB10
-Mcu.PinsNb=16
+Mcu.Pin9=PA7
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -53,7 +59,6 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -63,8 +68,12 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=B_DOWN
+PA0.Locked=true
+PA0.Signal=GPXTI0
 PA10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PA10.GPIO_Label=B_DOWN
+PA10.GPIO_Label=B_UP
 PA10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Locked=true
@@ -95,22 +104,32 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PA4.GPIO_Label=B_UP
-PA4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-PA4.GPIO_PuPd=GPIO_PULLUP
-PA4.Locked=true
-PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LD2 [green Led]
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=LCD_D4
+PA7.Locked=true
+PA7.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=LCD_D7
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB10.Locked=true
 PB10.Signal=S_TIM2_CH3
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=SWO
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=LCD_D5
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=LCD_E
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -123,6 +142,14 @@ PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=LCD_D6
+PC7.Locked=true
+PC7.Signal=GPIO_Output
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=LCD_RS
+PC9.Locked=true
+PC9.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Locked=true
@@ -213,12 +240,12 @@ RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=160000000
 RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=128000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.GPXTI4.0=GPIO_EXTI4
-SH.GPXTI4.ConfNb=1
 SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
 SH.S_TIM2_CH3.ConfNb=1
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
